# pyxu

./: .gitignore  .pre-commit-config.yaml  Introduction to Pycsou.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  known_issues.rst  pyproject.toml  requirements-conda.txt  requirements.txt  setup.cfg  setup.py  test.py  todo.txt  tox.ini
conda/: cuda-requirements.txt  min_requirements.txt  min_requirements.yaml  requirements.txt
dev/: README_no_html.rst  known_issues.rst  todo.txt  total_downloads.py
dev/joss/: paper.bib  paper.md  references.bib
dev/old_notebooks/: Pycsou Demo (EMPA) (backup).ipynb
dev/scratch/: README
doc/: api-reference.rst  conf.py  conf_old.py  dev_notes.rst  index.rst  migration_guide.rst  modules.rst  nitpick-exceptions  pycsou.abc.rst  pycsou.compound.rst  pycsou.linop.rst  pycsou.math.rst  pycsou.operator.blocks.rst  pycsou.operator.diffusion.rst  pycsou.operator.func.rst  pycsou.operator.interop.rst  pycsou.operator.linop.rst  pycsou.operator.map.rst  pycsou.operator.rst  pycsou.opt.rst  pycsou.opt.solver.rst  pycsou.rst  pycsou.runtime.rst  pycsou.sampler.rst  pycsou.util.rst  pycsou_tests.rst  pyxu.abc.rst  pyxu.math.rst  pyxu.operator.blocks.rst  pyxu.operator.func.rst  pyxu.operator.interop.rst  pyxu.operator.linop.rst  pyxu.operator.map.rst  pyxu.operator.rst  pyxu.opt.rst  pyxu.opt.solver.rst  pyxu.rst  pyxu.runtime.rst  pyxu.sampler.rst  pyxu.util.rst  (+3 more)
doc/_static/css/: custom.css
doc/_templates/: navbar-version.html  sphinx-chatgpt.html  sphinx_chatgpt.html
doc/algorithms/: index.rst  pycsou.core.solver.rst
doc/api/: abc.rst  experimental.rst  index.rst  info.deps.rst  info.ptype.rst  info.rst  info.warning.rst  math.rst  operator.interop.rst  operator.rst  opt.rst  opt.solver.rst  opt.stop.rst  other.rst  pycsou.core.functional.rst  pycsou.core.linop.rst  pycsou.core.map.rst  pycsou.core.solver.rst  pycsou.func.loss.rst  pycsou.func.penalty.rst  pycsou.func.rst  pycsou.linop.conv.rst  pycsou.linop.diff.rst  pycsou.linop.sampling.rst  pycsou.rst  pycsou.util.math.rst  pycsou.util.misc.rst  runtime.rst  util.rst
doc/api/abc/: arithmetic.rst  index.rst  operator.rst  solver.rst
doc/api/algorithms/: index.rst  pycsou.opt.proxalgs.rst
doc/api/classes/: index.rst  pycsou.core.functional.rst  pycsou.core.linop.rst  pycsou.core.map.rst  pycsou.core.solver.rst
doc/api/experimental/: index.rst  sampler.rst  xray.rst
doc/api/functionals/: index.rst  pycsou.func.base.rst  pycsou.func.loss.rst  pycsou.func.penalty.rst
doc/api/math/: index.rst  pycsou.math.green.rst  pycsou.math.prox.rst
doc/api/operator/: blocks.rst  func.rst  index.rst  interop.rst  linop.rst  map.rst
doc/api/operators/: index.rst  pycsou.linop.base.rst  pycsou.linop.conv.rst  pycsou.linop.diff.rst  pycsou.linop.sampling.rst
doc/api/util/: array_module.rst  complex.rst  index.rst  misc.rst  operator.rst
doc/api/utils/: pycsou.util.misc.rst  pycsou.util.stats.rst
doc/classes/: index.rst  pycsou.core.functional.rst  pycsou.core.linop.rst  pycsou.core.map.rst
doc/examples/: DifferentialOperators.ipynb  GALLERY_HEADER.rst  Stencils.ipynb  contribute.rst  contributing.ipynb  deblur.ipynb  index.rst  stencils.ipynb  xray.ipynb
doc/fair/: contribute.rst  dev_notes.rst  howto.rst  index.rst  score.rst
doc/fair/plugins/: CSEEG.rst  DSP-Notebooks.rst  EnvironTracker.rst  HVOX.rst  HoughDetector.rst  OrientationPy.rst  PYFW.rst  Palentologist.rst  PhaseRet.rst  PycGSP.rst  PycSphere.rst  TVDenoiser.rst  TokemakRec.rst  UncertaintyQuant.rst  WaveProp.rst  index.rst  pycNUFFT.rst  pycWavelet.rst  pyxu-eigh.rst  pyxu-gradient-descent.rst
doc/fair/plugins_preview/: CSEEG.rst  DSP-Notebooks.rst  EnvironTracker.rst  HVOX.rst  HoughDetector.rst  OrientationPy.rst  PYFW.rst  Palentologist.rst  PhaseRet.rst  PycGSP.rst  PycSphere.rst  TVDenoiser.rst  TokamakRec.rst  index.rst  (+4 more)
doc/functionals/: index.rst  pycsou.func.loss.rst
doc/general/: examples.rst  extensions.rst  features.rst  index.rst  install.rst  pycsou_classes.rst  theory.rst
doc/guide/: algebra.ipynb  algorithms.ipynb  bayes.ipynb  bayes.py  diff_ops.ipynb  funcs.ipynb  fwdops.ipynb  hpc.ipynb  index.rst  lipschitz.ipynb
doc/intro/: comparison.rst  feature_maturity_comparison.rst  hpc_features_comparison.rst  index.rst  installation.rst  primer.ipynb  tomo.ipynb  tutorial.ipynb  tutorial.rst
doc/notes/: index.rst  references.rst
doc/operators/: index.rst  pycsou.linop.conv.rst
doc/plugins/: CSEEG.rst  HoughDetector.rst  OrientationPy.rst  Palentologist.rst  PycGSP.rst  TVDenoiser.rst  index.rst  pycNUFFT.rst  pycWavelet.rst
doc/utils/: index.rst  pycsou.util.math.rst  pycsou.util.misc.rst
examples/: deblurring.py  imaging.py  inpainting.py  inpainting_buckeye.py  periodic_aperiodic.py  tikhonov_diff_op.py  tv_diff_op.py  unpooling.py
joss/: paper.md
misc/: known_issues.rst  todo.txt
misc/old_notebooks/: Pycsou Demo (+ PyTorch interoperability).ipynb  Pycsou Demo (Imaging Lunch).ipynb
notebooks/: Pycsou Demo (+ PyTorch interoperability).ipynb  Pycsou Demo (EMPA).ipynb  Pycsou Demo (Imaging Lunch).ipynb  guide.ipynb
pycsou.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
pycsou/abc/: __init__.py  operator.py
pycsou/core/: __init__.py  core.py  functional.py  linop.py  map.py  property.py  solver.py
pycsou/func/: __init__.py  base.py  loss.py  penalty.py
pycsou/linop/: __init__.py  analysis.py  base.py  conv.py  diff.py  sampling.py  synthesis.py  tensor.py  transform.py
pycsou/math/: __init__.py  green.py  prox.py
pycsou/opt/: __init__.py  mcmc.py  proxalgs.py
pycsou/util/: __init__.py  math.py  misc.py  stats.py  tex2rst.py
src/pycsou/: __init__.py  runtime.py
src/pycsou_tests/: conftest.py  test_runtime.py
src/pyxu/: __init__.py  config.py  runtime.py  typing.py
src/pyxu_tests/: conftest.py  launch_dask_cluster.py  test_runtime.py
src/tomo_fusion/: tcv_reconstruction.ipynb
tests/: conftest.py  test_placeholder.py  test_runtime.py
tests/opt/: test_stop.py
tests/util/: test_array_module.py  test_compute.py  test_infer_shape.py
(+412 files in other folders)
