[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

# Metadata ====================================================================
[project]
name = "pyxu"
dynamic = ["version"]
description = "Modular and scalable computational imaging."
readme = "README.rst"
requires-python = ">= 3.10, < 3.14"
license = "MIT"
authors = [
    { name = "S. Kashani" },
    { name = "M. Simeoni" },
    { name = "J. Rué-Queralt" },
    { name = "", email = "contact@pyxu.org" },
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls.download = "https://github.com/pyxu-org/pyxu"
urls.homepage = "https://pyxu-org.github.io/"
dependencies = [
    "equinox >= 0.11, < 1",
    "jax >= 0.5, != 0.5.1, != 0.5.2, < 1",
    "jaxtyping >= 0.2, < 1",
    "lineax >= 0.0.7, < 1",
    "numpy >= 1.25, < 3",
    "optax >= 0.2.4, < 1",
    "optimistix >= 0.0.10, < 1",
    "opt-einsum >= 3.3.0, < 4",
    "packaging >= 24.2",
]

# Optional dependencies =======================================================
[project.optional-dependencies]
viz = [
    "matplotlib >= 3.10, < 4",
]
gpu = [
    "jax[cuda12] >= 0.5, < 1",  # keep in sync with jax line above
]
dev = [
    "hatch >= 1.14, < 2",
    "pre-commit >= 4.1, < 5",
    "pytest >= 8.3, < 9",
    "ruff >= 0.9, < 1",  # keep synced with .pre-commit-config.yaml
    "tox >= 4.24, < 5",
]
all = [
    "pyxu[viz,gpu]",
]

# Get version info from Git ===================================================
[tool.hatch.version]
source = "vcs"

# sdist/wheel config ==========================================================
[tool.hatch.build]
exclude = [
    "/dev",
    "/doc",
    "/src/pyxu_tests",
]
include = [
    "/src",
]
packages = [
    "src/pyxu",
]

# Ruff config =================================================================
[tool.ruff]
fix = true  # auto fixing
exclude = ["src/**/__init__.py"]

[tool.ruff.lint]
select = ["I"]  # import sorting

[tool.ruff.lint.pydocstyle]
convention = "numpy"
