[metadata]
name = pyxu
summary = Modular and scalable computational imaging in Python with GPU/out-of-core computing.
long_description = file:misc/README_no_html.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = M. Simeoni, S. Kashani, J. Rué-Queralt & Pyxu Developers
author_email = matthieu.simeoni@gmail.com
url = https://github.com/matthieumeo/pyxu
download_url = https://github.com/matthieumeo/pyxu
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
license = MIT

[options]
package_dir =
	= src
packages =
	pyxu
	pyxu_tests
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.12
install_requires =
	numpy >= 1.24, < 2
	scipy >= 1.11, < 2
	dask[array,diagnostics,distributed] >= 2023.7, < 2023.12
	sparse >= 0.14, < 1
	numba >= 0.57, < 1
	packaging >= 23.1

[options.extras_require]
dev =
	graphviz >= 0.20, < 1
	ipython >= 8.14, < 9
	pre-commit >= 3.3, < 4
	pytest >= 7.4, < 8
	sphinx >= 7.2, < 8
	tox >= 4.6, < 5
	matplotlib >= 3.7, < 4
	scikit-image >= 0.21, < 1
	pydata_sphinx_theme >= 0.13, < 1
	sphinx_design >= 0.4.1, < 1
	sphinx_copybutton >= 0.5.2, < 1
	sphinx_codeautolink >= 0.15.0, < 1
	sphinx_togglebutton >= 0.3.2, < 1
	sphinx-gallery >= 0.14.0, < 1
	nbsphinx  >= 0.9.0, < 1
_gpu =
	nvidia-pyindex
	cupy-cuda12x
	cutensor-cu12
	nvidia-cudnn-cu12
	nvidia-cusparse-cu12
	nvidia-nccl-cu12
fft =
	finufft >= 2.1, < 3
fft_gpu =
	nvidia-cufft-cu12

[flake8]
max-complexity = 10
exclude =
	# __init__.py often contain weird code to import top-level items.
	__init__.py
extend-ignore =
	# We follow Black's guidelines here.
	# E501: line too long
	# E203: whitespace before ':'
	# E302: expected 2 blank lines, found 1
	E501
	E203
	E302

	# Do not use lambda expressions. (OK when used sparringly.)
	E731

	# Too many leading '#' for block comment.
	# We use more '#' terms at times to improve visual delimiters of long block comments.
	E266

	# Implementation is too complex.
	# (Sometimes necessary in scientific code.)
	C901
