[metadata]
name = pyxu
summary = Modular and scalable computational imaging in Python with GPU/out-of-core computing.
long_description = file:dev/README_no_html.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = M. Simeoni, S. Kashani, J. Rué-Queralt & Pyxu Developers
author_email = contact@pyxu.org
url = https://github.com/matthieumeo/pyxu
download_url = https://github.com/matthieumeo/pyxu
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
license = MIT

[options]
package_dir =
	= src
packages =
	pyxu
	pyxu_tests
zip_safe = True
include_package_data = True
python_requires = >= 3.9, < 3.12
install_requires =
	numpy >= 1.24, < 2
	scipy >= 1.11, < 2
	dask[array,diagnostics,distributed] >= 2023.7, < 2023.12
	sparse >= 0.14, < 1
	numba >= 0.57, < 1
	packaging >= 23.1

[options.extras_require]
dev =
	graphviz >= 0.20, < 1
	ipython >= 8.14, < 9
	matplotlib >= 3.7, < 4
	nbsphinx  >= 0.9.0, < 1
	pre-commit >= 3.3, < 4
	pydata_sphinx_theme == 0.13.3
	pytest >= 7.4, < 8
	scikit-image >= 0.21, < 1
	sphinx >= 7.2, < 8
	sphinx_codeautolink >= 0.15.0, < 1
	sphinx_copybutton >= 0.5.2, < 1
	sphinx_design >= 0.4.1, < 1
	sphinx_togglebutton >= 0.3.2, < 1
	sphinx-gallery >= 0.14.0, < 1
	tox >= 4.6, < 5
_gpu =
	cupy-cuda12x
	cutensor-cu12
	nvidia-cudnn-cu12
	nvidia-cusparse-cu12
	nvidia-nccl-cu12
	nvidia-pyindex
fft =
	finufft >= 2.1, < 3
fft_gpu =
	nvidia-cufft-cu12
